# semver-cargo

./: CHANGELOG.md  Cargo.toml  README.md  config.semver.json  sample.plugin.config.json
.github/workflows/: release.yml
.hooks/: pre-commit
.release/: semver-cargo  semver_cargo  semver_linux
src/: args.rs  cargo.rs  lib.rs  main.rs
src/models/: config.rs
src/utils/: parse_args.rs
tests/: integration_tests.rs  test_env.rs
