[package]
name = "semver-cargo"
version = "0.3.2"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "A SemVer-Release plugin for updating and publish cargo project releases."
license  = "MIT"
repository = "https://github.com/nraynes/semver-cargo"
keywords = ["semver", "cargo", "semantic", "project", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
derive-getters = "0.5.0"
r_log = "0.2.2"
semver-common = "0.5.5"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.149"
