[package]
name = "semver-cargo"
version = "0.5.4"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "A SemVer-Release plugin for updating and publish cargo project releases."
license  = "MIT"
repository = "https://github.com/nraynes/semver-cargo"
keywords = ["semver", "cargo", "semantic", "project", "tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/",
    "Cargo.toml",
    "LICENSES/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "build.rs",
]

[dependencies]
derive-getters = "0.5.0"
r_log = "0.3.3"
semver-common = "1.2.8"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive"] }
clap_mangen = "0.3.0"

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_mangen = "0.3.0"
r_log = "0.3.5"
semver-common = "1.2.3"

[dev-dependencies]
assert_fs = "1.1.3"
predicates = "3.1.4"
